Refactor date handling and streamline code
Refactored date handling to use `minusDays` and `plusDays` for better readability. Simplified list handling by replacing redundant `Collectors.toList()` with `toList()`. Improved code style by using multi-line string blocks and concise switch expressions, enhancing clarity and maintainability.